<resources>
    <string name="app_name">InventoryManagement</string>
    <string name="tell1">Sign up with one of the following options</string>
    <string name="tell2">Sign in with one of the following options</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="mail">Enter Email id</string>
    <string name="g">Google</string>
    <string name="a">Apple</string>
    <string name="back">BACK</string>
    <string name="or">OR</string>
    <string name="home">Home</string>
    <string name="add">ADD More</string>
    <string name="cart">Cart</string>
    <string name="dont">dont know</string>
    <string name="setting">Settings</string>
    <string name="card1">Cost of Inventory</string>
    <string name="card2">Outstanding Dues</string>
    <string name="card3">CREDIT</string>
    <string name="card4">Profit This Month</string>
    <string name="avg">Average Payment</string>
    <string name="more">More About this</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cname">Customer Name</string>
    //toggle
    <string name="openDrawer">open nav</string>
    <string name="closeDrawer">close nav</string>
</resources>