<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_below="@+id/arrow"
        android:layout_centerInParent="true"
        android:layout_marginTop="67dp"
        android:fontFamily="serif"
        android:text="@string/tell1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn2"
        android:layout_width="83dp"
        android:layout_height="88dp"
        android:layout_below="@+id/text2"
        android:layout_marginStart="106dp"
        android:background="@drawable/input"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/google"
        android:contentDescription="@string/g" />

    <ImageButton
        android:id="@+id/btn_3"
        android:layout_width="83dp"
        android:layout_height="88dp"
        android:layout_below="@+id/text2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20sp"
        android:layout_toEndOf="@+id/btn2"
        android:background="@drawable/input"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/apple"
        android:contentDescription="@string/a"/>

    <!--    <ImageView-->
    <!--        android:id="@+id/img1"-->
    <!--        android:layout_width="130dp"-->
    <!--        android:layout_height="134dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:layout_marginStart="-3dp"-->
    <!--        android:layout_marginTop="-22dp"-->
    <!--        android:layout_marginEnd="0sp"-->
    <!--        android:layout_marginBottom="0sp"-->
    <!--        android:src="@drawable/ellipse"-->
    <!--        tools:ignore="ContentDescription" />-->

    <ImageView
        android:id="@+id/img_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="233dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/line88"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="-160dp"
        android:src="@drawable/line88"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img__4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="-160dp"
        android:src="@drawable/or"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/radious"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/img_5"
        android:layout_marginStart="70dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/white"
        android:text="@string/signin"
        android:textColor="#9C9292" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/img_5"
        android:layout_marginStart="70dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/btn5"
        android:backgroundTint="@color/black"
        android:text="@string/signup"
        android:textColor="@color/white" />


    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/btn6"-->
    <!--        android:layout_marginTop="50dp"-->
    <!--        android:hint="@string/username"-->
    <!--        android:layout_marginLeft="10dp"/>-->
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_1"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/text3"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/input2"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#9A8F8F"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_1"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <!--    <EditText-->
    <!--        android:id="@+id/user_3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/text_4"-->
    <!--        android:layout_marginStart="10sp"-->
    <!--        android:layout_marginTop="10sp"-->
    <!--        android:layout_marginEnd="10sp"-->
    <!--        android:layout_marginBottom="10sp"-->
    <!--        android:background="@drawable/input2"-->
    <!--        android:hint="@string/password"-->
    <!--        android:importantForAutofill="no"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingTop="10dp"-->
    <!--        android:paddingEnd="5dp"-->
    <!--        android:paddingBottom="10dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="#9A8F8F"-->
    <!--        android:textSize="15sp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/text_4"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/user_1"-->
    <!--        android:layout_marginStart="10sp"-->
    <!--        android:layout_marginTop="10sp"-->
    <!--        android:layout_marginEnd="10sp"-->
    <!--        android:layout_marginBottom="10sp"-->
    <!--        android:text="@string/mail"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="15sp" />-->
    <EditText
        android:id="@+id/user2"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/text_5"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/input2"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#9A8F8F"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_below="@+id/user2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/radius"
        android:contentDescription="@string/signup"
        android:src="@drawable/signupp" />
</RelativeLayout>